// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalFormAdminPageTabs /> doesnt render a (new)  analysis tab, if form is not linked to a step yet 1`] = `
<ProposalFormAdminPageTabsstyle__ProposalFormAdminPageTabsContainer
  id="proposal-form-admin-page"
>
  <MemoryRouter
    initialEntries={
      Array [
        "/configuration",
        "/new_analysis",
        "/notifications",
        "/settings",
      ]
    }
    initialIndex={0}
    keyLength={4}
  >
    <header>
      <div>
        <FormattedMessage
          id="page.title.form.name"
          tagName="h1"
          values={
            Object {
              "formName": "ceci est le titre du proposal form",
            }
          }
        />
        <ProposalFormAdminPageTabsstyle__ActionContainer>
          <a
            href="/admin/capco/app/proposalform/list"
          >
            <Icon
              color="#0388cc"
              name="list"
              size={13}
            />
            <span
              className="ml-5"
            >
              link_action_list
            </span>
          </a>
          <a
            href="http://capco.dev/top-budget"
            rel="noopener noreferrer"
            target="_blank"
          >
            <Icon
              color="#0388cc"
              name="external-link"
              size={13}
            />
            <span
              className="ml-5"
            >
              global.preview
            </span>
          </a>
        </ProposalFormAdminPageTabsstyle__ActionContainer>
      </div>
      <ProposalFormAdminPageTabsstyle__NavContainer
        hasProposalFormUrl={true}
      >
        <ProposalFormAdminPageTabsstyle__NavItem>
          <NavLink
            activeClassName="active"
            id="link-tab-configuration"
            to="/configuration"
          >
            global.configuration
          </NavLink>
        </ProposalFormAdminPageTabsstyle__NavItem>
        <ProposalFormAdminPageTabsstyle__NavItem>
          <NavLink
            activeClassName="active"
            id="link-tab-notification"
            to="/notifications"
          >
            proposal_form.admin.notification
          </NavLink>
        </ProposalFormAdminPageTabsstyle__NavItem>
        <ProposalFormAdminPageTabsstyle__NavItem>
          <NavLink
            activeClassName="active"
            id="link-tab-settings"
            to="/SETTINGS"
          >
            global.params
          </NavLink>
        </ProposalFormAdminPageTabsstyle__NavItem>
      </ProposalFormAdminPageTabsstyle__NavContainer>
    </header>
    <Switch>
      <Route
        path="/configuration"
      >
        <Relay(injectIntl(Connect(ReduxForm)))
          proposalForm={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "step": null,
              "title": "ceci est le titre du proposal form",
              "url": "http://capco.dev/top-budget",
            }
          }
          query={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
            }
          }
        />
      </Route>
      <Route
        path="/notifications"
      >
        <Relay(injectIntl(Connect(ReduxForm)))
          proposalForm={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "step": null,
              "title": "ceci est le titre du proposal form",
              "url": "http://capco.dev/top-budget",
            }
          }
        />
      </Route>
      <Route
        path="/settings"
      >
        <Relay(injectIntl(Connect(ReduxForm)))
          proposalForm={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "step": null,
              "title": "ceci est le titre du proposal form",
              "url": "http://capco.dev/top-budget",
            }
          }
        />
      </Route>
    </Switch>
  </MemoryRouter>
</ProposalFormAdminPageTabsstyle__ProposalFormAdminPageTabsContainer>
`;

exports[`<ProposalFormAdminPageTabs /> doesnt render a (new) analysis tab, if feature is not enabled 1`] = `
<ProposalFormAdminPageTabsstyle__ProposalFormAdminPageTabsContainer
  id="proposal-form-admin-page"
>
  <MemoryRouter
    initialEntries={
      Array [
        "/configuration",
        "/new_analysis",
        "/notifications",
        "/settings",
      ]
    }
    initialIndex={0}
    keyLength={4}
  >
    <header>
      <div>
        <FormattedMessage
          id="page.title.form.name"
          tagName="h1"
          values={
            Object {
              "formName": "ceci est le titre du proposal form",
            }
          }
        />
        <ProposalFormAdminPageTabsstyle__ActionContainer>
          <a
            href="/admin/capco/app/proposalform/list"
          >
            <Icon
              color="#0388cc"
              name="list"
              size={13}
            />
            <span
              className="ml-5"
            >
              link_action_list
            </span>
          </a>
          <a
            href="http://capco.dev/top-budget"
            rel="noopener noreferrer"
            target="_blank"
          >
            <Icon
              color="#0388cc"
              name="external-link"
              size={13}
            />
            <span
              className="ml-5"
            >
              global.preview
            </span>
          </a>
        </ProposalFormAdminPageTabsstyle__ActionContainer>
      </div>
      <ProposalFormAdminPageTabsstyle__NavContainer
        hasProposalFormUrl={true}
      >
        <ProposalFormAdminPageTabsstyle__NavItem>
          <NavLink
            activeClassName="active"
            id="link-tab-configuration"
            to="/configuration"
          >
            global.configuration
          </NavLink>
        </ProposalFormAdminPageTabsstyle__NavItem>
        <ProposalFormAdminPageTabsstyle__NavItem>
          <NavLink
            activeClassName="active"
            id="link-tab-notification"
            to="/notifications"
          >
            proposal_form.admin.notification
          </NavLink>
        </ProposalFormAdminPageTabsstyle__NavItem>
        <ProposalFormAdminPageTabsstyle__NavItem>
          <NavLink
            activeClassName="active"
            id="link-tab-settings"
            to="/SETTINGS"
          >
            global.params
          </NavLink>
        </ProposalFormAdminPageTabsstyle__NavItem>
      </ProposalFormAdminPageTabsstyle__NavContainer>
    </header>
    <Switch>
      <Route
        path="/configuration"
      >
        <Relay(injectIntl(Connect(ReduxForm)))
          proposalForm={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "step": Object {
                "id": "<random id>",
              },
              "title": "ceci est le titre du proposal form",
              "url": "http://capco.dev/top-budget",
            }
          }
          query={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
            }
          }
        />
      </Route>
      <Route
        path="/notifications"
      >
        <Relay(injectIntl(Connect(ReduxForm)))
          proposalForm={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "step": Object {
                "id": "<random id>",
              },
              "title": "ceci est le titre du proposal form",
              "url": "http://capco.dev/top-budget",
            }
          }
        />
      </Route>
      <Route
        path="/settings"
      >
        <Relay(injectIntl(Connect(ReduxForm)))
          proposalForm={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "step": Object {
                "id": "<random id>",
              },
              "title": "ceci est le titre du proposal form",
              "url": "http://capco.dev/top-budget",
            }
          }
        />
      </Route>
    </Switch>
  </MemoryRouter>
</ProposalFormAdminPageTabsstyle__ProposalFormAdminPageTabsContainer>
`;

exports[`<ProposalFormAdminPageTabs /> render a (new) analysis tab 1`] = `
<ProposalFormAdminPageTabsstyle__ProposalFormAdminPageTabsContainer
  id="proposal-form-admin-page"
>
  <MemoryRouter
    initialEntries={
      Array [
        "/configuration",
        "/new_analysis",
        "/notifications",
        "/settings",
      ]
    }
    initialIndex={0}
    keyLength={4}
  >
    <header>
      <div>
        <FormattedMessage
          id="page.title.form.name"
          tagName="h1"
          values={
            Object {
              "formName": "ceci est le titre du proposal form",
            }
          }
        />
        <ProposalFormAdminPageTabsstyle__ActionContainer>
          <a
            href="/admin/capco/app/proposalform/list"
          >
            <Icon
              color="#0388cc"
              name="list"
              size={13}
            />
            <span
              className="ml-5"
            >
              link_action_list
            </span>
          </a>
          <a
            href="http://capco.dev/top-budget"
            rel="noopener noreferrer"
            target="_blank"
          >
            <Icon
              color="#0388cc"
              name="external-link"
              size={13}
            />
            <span
              className="ml-5"
            >
              global.preview
            </span>
          </a>
        </ProposalFormAdminPageTabsstyle__ActionContainer>
      </div>
      <ProposalFormAdminPageTabsstyle__NavContainer
        hasProposalFormUrl={true}
      >
        <ProposalFormAdminPageTabsstyle__NavItem>
          <NavLink
            activeClassName="active"
            id="link-tab-configuration"
            to="/configuration"
          >
            global.configuration
          </NavLink>
        </ProposalFormAdminPageTabsstyle__NavItem>
        <ProposalFormAdminPageTabsstyle__NavItem>
          <NavLink
            activeClassName="active"
            id="link-tab-new-analysis"
            to="/new_analysis"
          >
            proposal.tabs.evaluation
          </NavLink>
        </ProposalFormAdminPageTabsstyle__NavItem>
        <ProposalFormAdminPageTabsstyle__NavItem>
          <NavLink
            activeClassName="active"
            id="link-tab-notification"
            to="/notifications"
          >
            proposal_form.admin.notification
          </NavLink>
        </ProposalFormAdminPageTabsstyle__NavItem>
        <ProposalFormAdminPageTabsstyle__NavItem>
          <NavLink
            activeClassName="active"
            id="link-tab-settings"
            to="/SETTINGS"
          >
            global.params
          </NavLink>
        </ProposalFormAdminPageTabsstyle__NavItem>
      </ProposalFormAdminPageTabsstyle__NavContainer>
    </header>
    <Switch>
      <Route
        path="/configuration"
      >
        <Relay(injectIntl(Connect(ReduxForm)))
          proposalForm={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "step": Object {
                "id": "<random id>",
              },
              "title": "ceci est le titre du proposal form",
              "url": "http://capco.dev/top-budget",
            }
          }
          query={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
            }
          }
        />
      </Route>
      <Route
        path="/new_analysis"
      >
        <Relay(injectIntl(Connect(ReduxForm)))
          proposalForm={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "step": Object {
                "id": "<random id>",
              },
              "title": "ceci est le titre du proposal form",
              "url": "http://capco.dev/top-budget",
            }
          }
        />
      </Route>
      <Route
        path="/notifications"
      >
        <Relay(injectIntl(Connect(ReduxForm)))
          proposalForm={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "step": Object {
                "id": "<random id>",
              },
              "title": "ceci est le titre du proposal form",
              "url": "http://capco.dev/top-budget",
            }
          }
        />
      </Route>
      <Route
        path="/settings"
      >
        <Relay(injectIntl(Connect(ReduxForm)))
          proposalForm={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "step": Object {
                "id": "<random id>",
              },
              "title": "ceci est le titre du proposal form",
              "url": "http://capco.dev/top-budget",
            }
          }
        />
      </Route>
    </Switch>
  </MemoryRouter>
</ProposalFormAdminPageTabsstyle__ProposalFormAdminPageTabsContainer>
`;
